# ferogram

./: .gitattributes  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  SECURITY.md  config.html  crates.html  errors.html  features.html  index.html  installation.html  introduction.html  print.html  quickstart-bot.html  quickstart-user.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-04b1db19.js  searchindex-065304f4.js  searchindex-098e516c.js  searchindex-13e43010.js  searchindex-16409888.js  searchindex-1ce80075.js  searchindex-3150803d.js  searchindex-437b4e62.js  searchindex-52306761.js  searchindex-6c28794d.js  searchindex-a2011a82.js  searchindex-b08d7c1f.js  searchindex-b097326d.js  searchindex-c5d5afa1.js  searchindex-d270a347.js  searchindex-dab26105.js  searchindex-f63515b2.js  searchindex-f77cdc82.js  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy.yml
advanced/: cdn-downloads.html  connection-restart.html  dc-migration.html  experimental-features.html  layer-upgrade.html  proxy.html  raw-api.html  retry.html  transport-probing.html
api/: admin-rights.html  bot-config.html  chat-management.html  client-builder.html  client.html  contacts.html  dialogs.html  forum-topics.html  games.html  input-message.html  invite-links.html  participants.html  peer-types.html  polls.html  privacy.html  profile.html  quick-connect.html  search.html  stats.html  stickers.html  types.html  typing-guard.html
authentication/: 2fa.html  bot-login.html  session-backends.html  session.html  user-login.html
bot/: conversation.html  fsm.html  middleware.html
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  config.md  crates.md  errors.md  features.md  highway-model.md  installation.md  introduction.md  quickstart-bot.md  quickstart-user.md  whats-new.md
docs/src/advanced/: cdn-downloads.md  connection-restart.md  dc-migration.md  experimental-features.md  layer-upgrade.md  proxy.md  raw-api.md  retry.md  transport-probing.md
docs/src/api/: admin-rights.md  bot-config.md  chat-management.md  client-builder.md  client.md  contacts.md  dialogs.md  forum-topics.md  games.md  input-message.md  invite-links.md  participants.md  (+10 more)
docs/theme/: custom.css  custom.js
examples/: order_bot.rs
ferogram/: Cargo.toml  README.md
ferogram-app/: Cargo.toml
ferogram-app/src/: main.rs
ferogram-bot/: Cargo.toml
ferogram-bot/src/: main.rs
ferogram-connect/: Cargo.toml  README.md
ferogram-connect/src/: connection.rs  envelope.rs  error.rs  frame.rs  lib.rs  main.rs  pfs.rs  proxy.rs  race.rs  socks5.rs  tls_record.rs  transport.rs  transport_intermediate.rs  transport_kind.rs  transport_obfuscated.rs  util.rs
ferogram-crypto/: Cargo.toml  README.md
ferogram-crypto/src/: aes.rs  auth_key.rs  deque_buffer.rs  dh.rs  factorize.rs  lib.rs  obfuscated.rs  rsa.rs  sha.rs  srp.rs
ferogram-derive/: Cargo.toml  README.md
ferogram-derive/src/: lib.rs
ferogram-fsm/: Cargo.toml  README.md
ferogram-fsm/src/: context.rs  error.rs  key.rs  lib.rs  storage.rs
ferogram-mtproto/: Cargo.toml  README.md
ferogram-mtproto/fuzz/: Cargo.toml
ferogram-mtproto/fuzz/fuzz_targets/: decrypt_frame.rs  unpack_frame.rs
ferogram-mtproto/src/: authentication.rs  bind_temp_key.rs  encrypted.rs  lib.rs  message.rs  session.rs  transport.rs
ferogram-mtproto/tests/: session.rs
ferogram-mtsender/: Cargo.toml  README.md
ferogram-mtsender/src/: errors.rs  lib.rs  mtp_sender.rs  pool.rs  retry.rs  sender.rs  sender_task.rs
ferogram-mtsender/tests/: integration.rs
ferogram-parsers/: Cargo.toml  README.md
ferogram-parsers/src/: html.rs  lib.rs  markdown.rs  rich_common.rs  rich_html.rs  rich_markdown.rs
ferogram-session/: Cargo.toml  README.md
ferogram-session/src/: lib.rs  string_session.rs
ferogram-tl-gen/: Cargo.toml  README.md
ferogram-tl-gen/src/: codegen.rs  grouper.rs  lib.rs  metadata.rs  namegen.rs
ferogram-tl-parser/: Cargo.toml  README.md
ferogram-tl-parser/src/: errors.rs  iterator.rs  lib.rs  utils.rs
ferogram-tl-parser/tests/: parse.rs
ferogram-tl-types/: Cargo.toml  README.md  build.rs
ferogram-tl-types/src/: deserialize.rs  generated.rs  lib.rs  serialize.rs
ferogram-tl-types/tests/: ser_de.rs
ferogram-tl-types/tl/: api.tl
ferogram/examples/: README.md  admin_log.rs  chat_history.rs  dialogs_list.rs  download_media.rs  echo_bot.rs  filters_showcase.rs  get_participants.rs  hello_self.rs  inline_keyboard.rs  inline_query_bot.rs  order_bot.rs  poll_bot.rs  progress_transfer.rs  rich_message.rs  schedule_message.rs  search_messages.rs  serverless_userbot.rs  showcase_bot.rs  string_session_gen.rs  transfer_showcase.rs  translate_bot.rs  typed_errors.rs  userbot.rs
ferogram/src/: builder.rs  builder_util.rs  cdn_download.rs  conversation.rs  dc_migration.rs  dc_pool.rs  dialog.rs  dns_resolver.rs  envelope.rs  errors.rs  file_info.rs  filters.rs  fsm.rs  guest_chat.rs  inline_iter.rs  input_message.rs  keyboard.rs  lib.rs  macros.rs  media.rs  middleware.rs  mini_app.rs  parsers.rs  participants.rs  peer_cache.rs  peer_ext.rs  peer_ref.rs  persist.rs  poll.rs  proxy.rs  pts.rs  pts_tests.rs  quick_connect.rs  reactions.rs  restart.rs  resume.rs  retry.rs  search.rs  session.rs  session_backend.rs  (+14 more)
ferogram/src/client/: auth.rs  bots.rs  chats.rs  dialogs.rs  files.rs  forum.rs  invites.rs  messages.rs  mod.rs  payments.rs  polls.rs  privacy.rs  reactions.rs  resolve.rs  settings.rs  stickers.rs  users.rs
ferogram/src/filters/: builtins.rs  callback_inline.rs  core.rs  mod.rs  router.rs
ferogram/src/message_box/: adaptor.rs  defs.rs  mod.rs  tests.rs
ferogram/src/middleware/: builtins.rs  core.rs  mod.rs
ferogram/tests/: integration.rs  resumable_transfers.rs
messaging/: formatting.html  keyboards.html  media.html  reactions.html  receiving.html  rich-messages.html  sending.html
theme/: custom-3cd05ff1.css  custom-a37c2a24.js
updates/: callbacks.html  guest-chat.html  incoming-message.html  inline-mode.html  update-types.html
(+27 files in other folders)
