[workspace]
resolver = "2"

members = [
    "ferogram-tl-parser",
    "ferogram-tl-gen",
    "ferogram-tl-types",
    "ferogram-crypto",
    "ferogram-mtproto",
    "ferogram-session",
    "ferogram-parsers",
    "ferogram",
    "ferogram-derive",
    "ferogram-connect",
    "ferogram-app",
    "ferogram-bot",
]

[workspace.package]
version       = "0.3.6"
edition       = "2024"
license       = "MIT OR Apache-2.0"
readme        = "README.md"
authors       = ["Ankit Chaubey <ankitchaubey.dev@gmail.com>"]
repository    = "https://github.com/ankit-chaubey/ferogram"
homepage      = "https://github.com/ankit-chaubey/ferogram"
documentation = "https://docs.rs/ferogram"

[workspace.dependencies]
ferogram-derive   = { path = "ferogram-derive",    version = "0.3.6" }
ferogram-tl-parser  = { path = "ferogram-tl-parser",  version = "0.3.6" }
ferogram-tl-gen     = { path = "ferogram-tl-gen",     version = "0.3.6" }
ferogram-tl-types   = { path = "ferogram-tl-types",   version = "0.3.6" }
ferogram-crypto     = { path = "ferogram-crypto",      version = "0.3.6" }
ferogram-mtproto    = { path = "ferogram-mtproto",     version = "0.3.6" }
ferogram-session    = { path = "ferogram-session",     version = "0.3.6" }
ferogram-parsers    = { path = "ferogram-parsers",     version = "0.3.6" }
ferogram            = { path = "ferogram",             version = "0.3.6" }
tracing            = { version = "0.1", features = ["log"] }
