[package]
name        = "ferogram-bot"
description = "Showcase bot for ferogram: production-grade Telegram bot"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
publish = false

[[bin]]
name = "ferogram-bot"
path = "src/main.rs"

[dependencies]
ferogram          = { path = "../ferogram",       version = "0.1.0" }
ferogram-tl-types = { path = "../ferogram-tl-types", version = "0.1.0", features = ["tl-api", "tl-mtproto"] }
tokio      = { version = "1", features = ["full"] }
env_logger = "0.11"
chrono     = { version = "0.4", features = ["clock"] }
rand       = "0.8"
sha2       = "0.10"
base64     = "0.22"
