[package]
name         = "ferogram-derive"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
description  = "Procedural macros for ferogram - #[derive(FsmState)]"
keywords     = ["telegram", "mtproto", "bot", "proc-macro", "derive"]
categories   = ["api-bindings"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
