[package]
name        = "ferogram-mtproto"
description = "MTProto 2.0 session management, message framing, DH key exchange and transport abstractions"
readme      = "README.md"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true
documentation = "https://docs.rs/ferogram-mtproto"
keywords      = ["telegram", "mtproto", "session", "transport", "crypto"]
categories    = ["network-programming", "api-bindings"]

[dependencies]
ferogram-tl-types = { workspace = true, features = ["tl-mtproto"] }
ferogram-crypto   = { workspace = true }
num-bigint = "0.4"
tracing    = { version = "0.1", features = ["log"] }
sha1       = "0.10.6"
sha2       = "0.10.9"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
